added BLL and WebAPI

--- a/Lesson_4/WebAPI/appsettings.json
+++ b/Lesson_4/WebAPI/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "DbConnectionString": "Server=WINDOWS-PT13728\\SQLEXPRESS;Database=Lesson_4;Trusted_Connection=True;Encrypt=False;"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
