Add table relationships with configuration classes and improve data presentation

--- a/Lesson_4/WebAPI/appsettings.json
+++ b/Lesson_4/WebAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DbConnectionString": "Server=WINDOWS-PT13728\\SQLEXPRESS;Database=Lesson_4;Trusted_Connection=True;Encrypt=False;"
+        "DbConnectionString": "Server=WIN-NP03LGESKIS\\SQLEXPRESS;Database=Lesson_4;Trusted_Connection=True;Encrypt=False;"
     },
     "Logging": {
         "LogLevel": {
